# Ideai-DockerAI-000

./: .gitignore  ALL_COMPLETE.md  COMPLETE_IMPLEMENTATION.md  EVALUATION_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  MODELS.md  NAVIGATION_COMPLETE.md  PORTS.md  QUICKSTART.md  README.md  READY_TO_TEST.md  STATUS.md  USER_GUIDE.md  docker-compose.yaml  start.sh
backend/python-rag/: .dockerignore  Dockerfile  install-deps.sh  main.py  pytest.ini  requirements.txt
backend/python-rag/evaluation/: __init__.py  bertscore.py  bleu_rouge.py  exact_match.py  lm_eval_harness.py  ragas_evaluator.py
backend/python-rag/frontend/: package-lock.json  package.json
backend/python-rag/testing/: __init__.py  conftest.py  test_models.py
backend/rust-wasm-compute/: .dockerignore  Cargo.toml  Dockerfile
backend/rust-wasm-compute/src/: main.rs
docs/: api-reference.md  architecture-decisions.md  development-guide.md  docker-model-runner.md  evaluation-plan.md  evaluation-quickstart.md  ollama-docker-setup.md  ollama-explained.md  setting-up-6-models.md  technology-overview.md
frontend/: .dockerignore  Dockerfile  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/evaluation/: page.tsx
frontend/app/guide/: page.tsx
frontend/app/services/: page.tsx
frontend/app/services/grafana/: page.tsx
frontend/app/tests/: page.tsx
frontend/components/: navbar.tsx
frontend/components/ui/: checkbox.tsx
monitoring/: prometheus.yml
services/deepeval/: Dockerfile  install-deepeval.sh  main.py  requirements.txt
(+6 files in other folders)
