[package]
name = "rust-wasm-compute"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
ndarray = "0.15"
rayon = "1.8"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

